// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should accept icon as content 1`] = `
.circuit-2 {
  position: relative;
  display: inline-block;
}

.circuit-2:hover > span {
  visibility: visible;
  opacity: 1;
}

.circuit-0 {
  visibility: hidden;
  opacity: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  min-width: 60px;
  background-color: #0F131A;
  color: #FFFFFF;
  text-align: center;
  border-radius: 4px;
  padding: 8px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

.circuit-0::after {
  content: '';
  position: absolute;
  margin-left: -4px;
  border-width: 4px;
  border-style: solid;
  border-color: #0F131A transparent transparent transparent;
  top: 100%;
}

.circuit-0::after {
  left: 50%;
}

<div
  className="circuit-2 circuit-3"
>
  <span
    className="circuit-0 circuit-1"
  >
    <svg
      fill="#000000"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path />
    </svg>
  </span>
  Some text
</div>
`;

exports[`Tooltip should align to the center 1`] = `
.circuit-2 {
  position: relative;
  display: inline-block;
}

.circuit-2:hover > span {
  visibility: visible;
  opacity: 1;
}

.circuit-0 {
  visibility: hidden;
  opacity: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  min-width: 60px;
  background-color: #0F131A;
  color: #FFFFFF;
  text-align: center;
  border-radius: 4px;
  padding: 8px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

.circuit-0::after {
  content: '';
  position: absolute;
  margin-left: -4px;
  border-width: 4px;
  border-style: solid;
  border-color: #0F131A transparent transparent transparent;
  top: 100%;
}

.circuit-0::after {
  left: 50%;
}

<div
  className="circuit-2 circuit-3"
>
  <span
    className="circuit-0 circuit-1"
  >
    The tooltip content
  </span>
  Something with tooltip
</div>
`;

exports[`Tooltip should align to the left 1`] = `
.circuit-2 {
  position: relative;
  display: inline-block;
}

.circuit-2:hover > span {
  visibility: visible;
  opacity: 1;
}

.circuit-0 {
  visibility: hidden;
  opacity: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  min-width: 60px;
  background-color: #0F131A;
  color: #FFFFFF;
  text-align: center;
  border-radius: 4px;
  padding: 8px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  right: 50%;
}

.circuit-0::after {
  content: '';
  position: absolute;
  margin-left: -4px;
  border-width: 4px;
  border-style: solid;
  border-color: #0F131A transparent transparent transparent;
  top: 100%;
}

.circuit-0::after {
  right: 16px;
}

<div
  className="circuit-2 circuit-3"
>
  <span
    className="circuit-0 circuit-1"
  >
    The tooltip content
  </span>
  Something with tooltip
</div>
`;

exports[`Tooltip should align to the right 1`] = `
.circuit-2 {
  position: relative;
  display: inline-block;
}

.circuit-2:hover > span {
  visibility: visible;
  opacity: 1;
}

.circuit-0 {
  visibility: hidden;
  opacity: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  min-width: 60px;
  background-color: #0F131A;
  color: #FFFFFF;
  text-align: center;
  border-radius: 4px;
  padding: 8px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  left: 50%;
}

.circuit-0::after {
  content: '';
  position: absolute;
  margin-left: -4px;
  border-width: 4px;
  border-style: solid;
  border-color: #0F131A transparent transparent transparent;
  top: 100%;
}

.circuit-0::after {
  left: 16px;
}

<div
  className="circuit-2 circuit-3"
>
  <span
    className="circuit-0 circuit-1"
  >
    The tooltip content
  </span>
  Something with tooltip
</div>
`;

exports[`Tooltip should render with icon 1`] = `
.circuit-2 {
  position: relative;
  display: inline-block;
}

.circuit-2:hover > span {
  visibility: visible;
  opacity: 1;
}

.circuit-0 {
  visibility: hidden;
  opacity: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  min-width: 60px;
  background-color: #0F131A;
  color: #FFFFFF;
  text-align: center;
  border-radius: 4px;
  padding: 8px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

.circuit-0::after {
  content: '';
  position: absolute;
  margin-left: -4px;
  border-width: 4px;
  border-style: solid;
  border-color: #0F131A transparent transparent transparent;
  top: 100%;
}

.circuit-0::after {
  left: 50%;
}

<div
  className="circuit-2 circuit-3"
>
  <span
    className="circuit-0 circuit-1"
  >
    The tooltip content
  </span>
  <span>
    Text and a
  </span>
  <svg
    fill="#000000"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path />
  </svg>
</div>
`;
